--- a/00-K1-CS1B-FIA-APRIL-2022/K1_Question_3.Rmd
+++ b/00-K1-CS1B-FIA-APRIL-2022/K1_Question_3.Rmd
@@ -34,9 +34,11 @@ pre {
 * Introduction to R programming
 * Fundamentals of Statistical Analysis
 
-* Question 1
+* Question 3
 
 ---
+
+### Exercise
 
 Consider a sample of 10,000 car insurance policies sold to drivers who have had a 
 driving licence for no more than 5 years. The data are given in the file 
@@ -54,52 +56,50 @@ of no claims discount than younger drivers.
 
 ---
 
-#### Exercises 
-(i) Plot two histograms for the number of years with no claims discount, one for 
-young policyholders and another for old policyholders. 
-(ii) Comment on the suggestion that drivers belonging to the old age category 
-have more years of no claims discount than young drivers, using the 
-histograms from part (i).  
+### Load the Data
 
-(iii) Calculate the proportion of: 
-(a) policyholders with more than 2 years of no claims discount among 
+```{r include=FALSE}
+rm(list=ls())
+```
+
+```{r}
+load("CarInsurance.Rdata")
+ls()
+```
+
+---
+
+#### Exercises 
+
+A. Plot two histograms for the number of years with no claims discount, one for 
+young policyholders and another for old policyholders. 
+
+B. Comment on the suggestion that drivers belonging to the old age category 
+have more years of no claims discount than young drivers, using the 
+histograms from part (A).  
+
+C. Calculate the proportion of policyholders with more than 2 years of no claims discount among 
 young policyholders. 
-(b) policyholders with more than 2 years of no claims discount among old 
+
+D. Calculate the proportion of policyholders with more than 2 years of no claims discount among old 
 policyholders. 
 
 ---
 
-(iv) Test the hypothesis that the proportion of policyholders with more than 2 
-years of no claims discount is equal in both groups (young and old 
-policyholders).  
-An analyst assumes that the number of claims per year has a Poisson distribution. The 
-analyst wishes to fit a generalised linear model (GLM) to the observed claim counts 
-using age,LY and NCD as explanatory variables. 
+#### Part (A)
 
----
-
-(v) Fit a GLM to the claim counts with age, LY and NCD as the main effect 
-explanatory variables.
-To simplify the integration of the model into business processes, an insurer wishes to 
-use only models with at most two explanatory variables. 
-(vi) Determine which two explanatory variables (out of age, LY and NCD) should 
-be used in a GLM for the claim counts if only two explanatory variables are 
-allowed. 
-(vii) Comment on the comparison of the fit of the models in parts (v) and (vi).  
-
-
-
----
-
-
-Q3
-(i)
 Plot histograms for no claims discount years:
 
 ```{r}
 NCD_old = NCD[age==1] 
 NCD_young = NCD[age==0] 
+
 hist(NCD_old, prob=TRUE, breaks = c(0,1,2,3,4,5)) 
+```
+
+---
+
+```{r}
 hist(NCD_young, prob=TRUE, breaks = c(0,1,2,3,4,5)) 
 ```
 
@@ -107,29 +107,34 @@ hist(NCD_young, prob=TRUE, breaks = c(0,1,2,3,4,5))
 
 Alternative R code (this produces more accurate plots):
 
-```{r}
+```{r eval = FALSE}
 hist(NCD_young, breaks=seq(-0.5,5.5,by=1))
+
 hist(NCD_old, breaks=seq(-0.5,5.5,by=1))
 ```
 
 ---
 
-
-#### Part (ii)
+#### Part (B)
 The distribution for old policyholders is more concentrated on the right, 
 so the number of years of NCD seems to be higher for old policyholders. 
 
-
 ---
 
+#### Part (C)
 
-(iii)(a)
 Calculate proportions:
 
 ```{r}
 prop_young = sum(NCD_young > 2)/length(NCD_young) 
 prop_young
 ```
+
+```{r}
+prop_young = mean(NCD_young > 2)
+prop_young
+```
+
 
 Proportion is 0.5736150 
 
@@ -139,7 +144,9 @@ Alternative R code:
 
 ```{r}
 length(NCD_young[NCD_young>2])/length(NCD_young)
-(b)
+```
+
+```{r}
 prop_old = sum(NCD_old > 2)/length(NCD_old) 
 prop_old
 
@@ -156,38 +163,62 @@ length(NCD_old[NCD_old>2])/length(NCD_old)
 
 ---
 
-(iv)
+#### Exercises
 
+E. Test the hypothesis that the proportion of policyholders with more than 2 
+years of no claims discount is equal in both groups (young and old 
+policyholders). 
+
+---
+
+#### Part (E)
 
 Test the hypothesis that prop of NCD >2 is equal for young and old, against alternative that 
 proportions are not equal: 
 
 ```{r}
 NCDgreaterTwo = c(sum(NCD_young > 2), sum(NCD_old > 2)) 
-YoungOld = c(length(NCD_young), length(NCD_old)) 
+
+head(NCDgreaterTwo)
 ```
 
-Two-sample test for equality of proportions:
-prop.test(NCDgreaterTwo, YoungOld, correct=F) 
-data: NCDgreaterTwo out of YoungOld
-X-squared = 1924, df = 1, p-value < 2.2e-16
-alternative hypothesis: two.sided
-95 percent confidence interval:
--0.4103664 -0.3832408
-sample estimates:
- prop 1 prop 2 
-0.5736150 0.9704187
+```{r}
+YoungOld = c(length(NCD_young), length(NCD_old)) 
 
-
-The 𝑝𝑝-value is very small, therefore we reject the null hypothesis of equal proportions. 
+head()
+```
 
 ---
 
-#### Part (E)
+#### Part E
 
-R code:
-glm(claims ~ age + LY + NCD, family = poisson)
-or
+Two-sample test for equality of proportions:
+
+```{r}
+prop.test(NCDgreaterTwo, YoungOld, correct=F) 
+```
+
+
+The $p$-value is very small, therefore we reject the null hypothesis of equal proportions. 
+
+---
+
+### Exercises
+
+An analyst assumes that the number of claims per year has a Poisson distribution. The 
+analyst wishes to fit a generalised linear model (GLM) to the observed claim counts 
+using age,LY and NCD as explanatory variables. 
+
+
+F. Fit a GLM to the claim counts with age, LY and NCD as the main effect 
+explanatory variables.
+
+
+----
+
+
+#### Part (F)
+
 
 ```{r}
 glm(claims ~ factor(age) + LY + NCD, family = poisson) 
@@ -195,29 +226,22 @@ summary(glm(claims ~ age + LY + NCD, family = poisson))
 
 
 ```
----
-
-
-Call:
-glm(formula = claims ~ age + LY + NCD, family = poisson)
-Deviance Residuals: 
- Min 1Q Median 3Q Max 
--1.7864 -1.1705 -0.0495 0.5274 3.9661 
-Coefficients:
- Estimate Std. Error z value Pr(>|z|) 
-(Intercept) 0.467231 0.034983 13.356 < 2e-16 ***
-age -0.009214 0.033348 -0.276 0.782 
-LY -0.113913 0.021145 -5.387 7.16e-08 ***
-NCD -0.095156 0.019703 -4.829 1.37e-06 ***
----
-Signif. codes: 0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
-Null deviance: 11574 on 9999 degrees of freedom
-Residual deviance: 11015 on 9996 degrees of freedom
-AIC: 23104
 
 ---
 
-#### Part (F)
+
+To simplify the integration of the model into business processes, an insurer wishes to 
+use only models with at most two explanatory variables. 
+
+G. Determine which two explanatory variables (out of age, LY and NCD) should 
+be used in a GLM for the claim counts if only two explanatory variables are 
+allowed. 
+
+H. Comment on the comparison of the fit of the various candidate models.  
+
+---
+
+#### Part (G)
 
 We need to fit the three possible models with two variables each and compare the AIC 
 values:
@@ -235,10 +259,12 @@ Model LY + NCD has the smallest AIC value and should be preferred.
 
 ---
 
-(vi)
-The AIC for model LY + NCD (23102) is slightly lower than the AIC for
+#### Part (H)
+
+* The AIC for model LY + NCD (23102) is slightly lower than the AIC for
 age + LY + NCD (23104), but the AIC values are very close. 
-We would prefer model LY + NCD as it also involves fewer variables (it is a smaller 
+
+* We would prefer model LY + NCD as it also involves fewer variables (it is a smaller 
 model). 
 ---
 
