--- a/00-L2-CS2B-ASI-MARCH-2022/L2-Question4.Rmd
+++ b/00-L2-CS2B-ASI-MARCH-2022/L2-Question4.Rmd
@@ -59,7 +59,7 @@ the plot into your answer sheet.
 
 
 ---
-[20 Marks]
+
 Solution 4:
 # i)
 # a)
@@ -73,8 +73,12 @@ var = 4
 ```{r}
 dlnorm(5000,mu,sqrt(var))
 ## [1] 3.030741e-05
-# The likelihood that the claim will be of 5000 is 0.000030
+```
 
+The likelihood that the claim will be of 5000 is 0.000030
+
+
+```{r}
 # b)
 1-plnorm(5000,mu,sqrt(var))
 ## [1] 0.7707756
@@ -101,16 +105,18 @@ maximum claim payout in the confidence interval [0.9,0.99] is [285815.9, 23
 qlnorm(0.5,mu,sqrt(var))
 ## [1] 22026.47
 #Median of Z is 22026.47
- (2)
+
+
+```{r}
 # e)
 qlnorm(0.75,mu,sqrt(var))-qlnorm(0.25,mu,sqrt(var))
 ## [1] 79162.81
 # Interquartile range for Z is 79162.81
+```
 
 ---
 
-# ii)
-a)
+
 ```{r}
 set.seed(50)
 a=rlnorm(100,mu,sqrt(var))
@@ -123,6 +129,8 @@ median(a)
 ## [1] 22785.05
 ```
 ---
+
+* Standard Deviation and Skewness
 
 ```{r}
 sd(a)
@@ -141,8 +149,11 @@ sk(a)
 
 ---
 
+
+```{r}
 # (b)
 hist(a, freq = FALSE,xlim = c(0,100000),ylim = c(0,0.00001))
 #hist(a,freq = FALSE)
+```
 
 ---
