--- a/00-M1-CS1B-ASI-July-2022/M1-Question2.Rmd
+++ b/00-M1-CS1B-ASI-July-2022/M1-Question2.Rmd
@@ -59,3 +59,52 @@ IAI CS1B-0722
 Theorem.
 
 ---
+
+Solution 2:
+i) count <- c(31,29,19,18,31,28, 34,27,34,30,16,18, 26,27,27,18,24,22, 28,24,21,17,24)
+> quantile(count,0.25)
+25% 
+20 
+> quantile(count,0.75)
+75% 
+28.5 
+> IQR(count)
+[1] 8.5
+[4]
+ii) hist(count)
+IAI CS1B-0722
+Page 3 of 7
+[3]
+iii) lambda.hat=mean(x)
+print(lambda.hat)
+[1] 24.91304
+[3]
+iv) Ho: The mean fiber count is 25
+H1: Mean fiber count is not equal to 25
+> t.test(count,mu=25)
+One Sample t-test
+data: count
+t = -0.076034, df = 22, p-value = 0.9401
+alternative hypothesis: true mean is not equal to 25
+95 percent confidence interval:
+22.54124 27.28485
+sample estimates:
+mean of x 
+24.91304
+Based on the p-value the null hypothesis Ho that “the mean fiber count is 25” cannot be rejected. Also 25 
+lies within the 95% confidence interval.
+[5]
+v) lambda.hat.sterror=sqrt(lambda.hat/length(x))
+print(lambda.hat.sterror)
+[1] 1.040757
+[2]
+IAI CS1B-0722
+Page 4 of 7
+vi) lambda.CI.Limits=lambda.hat + c(-1,1)*qnorm(.95)*lambda.hat.sterror
+print(lambda.CI.Limits)
+[1] 23.20115 26.62494
+[3]
+vii) > pnorm(30,lambda.hat,sqrt(lambda.hat),lower.tail = FALSE)
+[1] 0.1540622
+[4]
+[24 Marks]
