--- a/00-M1-CS1B-ASI-July-2022/M1-Question3.Rmd
+++ b/00-M1-CS1B-ASI-July-2022/M1-Question3.Rmd
@@ -42,11 +42,14 @@ Q. 3) An analysis was carried out to investigate the annual average rainfall of 
 The data is as below:
 Iran: 128,125,133,104,146,132,125,118,129,124
 Belgium:160,128,169,105,151,164,162,177,185,150,182,158,156,123,141,176,162,172
+
+#### Exercises
+
 1.  Perform a suitable test to determine whether the rainfall in both countries has equal 
 variance or not, at the 5% confidence level. (6)
 2.  Test whether the mean rainfall in both countries is equal or not, at 5% confidence 
 level. 
-3.   Calculate the 95% confidence interval for difference in means. (2)
+3.   Calculate the 95% confidence interval for difference in means. 
 4.  Comment on the results in part (2.  and (3.  .
 ---
 
@@ -56,3 +59,52 @@ Belgium:160,128,169,105,151,164,162,177,185,150,182,158,156,123,141,176,162,172
 ```
 
 ---
+
+Solution 3:
+i)
+H0: Annual average rainfall of Belgium and Iran are same
+H1: Annual average rainfall of Belgium and Iran are not same
+Iran <- c(128,125,133,104,146,132,125,118,129,124)
+Belgium <- c(160,128,169,105,151,164,162,177,185,150,182,158,156,123,141,176,162,172)
+var.test(Iran, Belgium)
+F test to compare two variances
+data: Iran and Belgium
+F = 0.25802, num df = 9, denom df = 17, p-value = 0.04385
+alternative hypothesis: true ratio of variances is not equal to 1
+95 percent confidence interval:
+0.0864436 0.9602591
+sample estimates:
+ratio of variances 
+ 0.258022
+Since p-value < 0.05 we fail the variance test thus we reject the null hypothesis that both have equal 
+variance
+[
+---
+ii)
+
+```{r}
+t.test(Iran, Belgium, var.equal = FALSE)
+```
+
+OUTPUT
+data: Iran and Belgium
+t = -4.9984, df = 25.904, p-value = 3.407e-05
+alternative hypothesis: true difference in means is not equal to 0
+
+95 percent confidence interval:
+-42.79403 -17.85041
+sample estimates:
+mean of x mean of y 
+126.4000 156.7222
+Since, P-value<0.05 we reject the null hypothesis and can conclude that both cities have different amount 
+of rainfall with 95% confidence.
+
+---
+iii) Confidence interval can be read from part b
+95 percent confidence interval:
+-42.79403 -17.85041
+[2]
+iv) The confidence interval (-42.8,-17.8) does not contain 0, therefore the assumption of equal means is 
+not true. This result is in line with the conclusion in part (b). 
+[3]
+[17 Marks]
