--- a/00-M2-CS2B-ASI-July-2022/M2-Question1.Rmd
+++ b/00-M2-CS2B-ASI-July-2022/M2-Question1.Rmd
@@ -51,3 +51,105 @@ claim ‘p’ in any given year is greater than X where X = {10, 15, 20,….100}
 4.  Plot a curve of the probabilities against the maximum claim in a year and do appropriate 
 labelling. (4)
 5.  Explain the reason associated with the shape of the curve generated in (4. .
+
+
+---
+
+Institute of Actuaries of India
+Subject CS2B – Risk Modelling and 
+Survival Analysis (Paper B)
+July 2022 Examination
+INDICATIVE SOLUTION
+Introduction
+The indicative solution has been written by the Examiners with the aim of helping candidates. The 
+solutions given are only indicative. It is realized that there could be other points as valid answers and 
+examiner have given credit for any alternative approach or interpretation which they consider to be 
+reasonable.
+IAI CS2B-0722
+Page 2 of 14
+options(warn=-1)
+Solution.1
+# (i) 
+fMLE <- function(params) {
+ f<- 1/params[2]*(1+params[3]*(maxima-params[1])/params[2])^(-1-1/params[3
+])*exp(- (1+params[3]*(maxima-params[1])/params[2])^(-1/params[3]))
+ lnf<-log(f)
+ sum(-lnf)
+}
+ [3]
+# (ii)
+maxima <- c(8,8,9)
+alpha<-6; beta<-4; gamma<-5
+p<-c(alpha,beta,gamma)
+fMLE(p)
+## [1] 11.32428
+MLE<-nlm(fMLE,p); 
+MLE
+## $minimum
+## [1] -2.456456
+## 
+## $estimate
+## [1] 8.707082 3.066028 4.333867
+## 
+## $gradient
+## [1] 470.02988 -101.66352 69.47203
+## 
+## $code
+## [1] 2
+## 
+## $iterations
+## [1] 26
+[4]
+# (iii)
+alpha <- MLE$estimate[1]
+beta <- MLE$estimate[2]
+gamma <- MLE$estimate[3]
+probs<-c()
+for (i in seq(10,100,5)) {
+ m<-i
+ p <- 1-exp(-(1+gamma*(m-alpha)/beta)^(-1/gamma))
+ probs<-c(probs,p)
+}
+output <- matrix(NA, nrow = 19, ncol = 2)
+output<-as.data.frame(output)
+IAI CS2B-0722
+Page 3 of 14
+names(output)<-c("X","p")
+output$X<-seq(10,100,5)
+output$p<-probs
+output
+## X p
+## 1 10 0.5446814
+## 2 15 0.4452690
+## 3 20 0.4056946
+## 4 25 0.3813271
+## 5 30 0.3639293
+## 6 35 0.3505069
+## 7 40 0.3396414
+## 8 45 0.3305517
+## 9 50 0.3227634
+## 10 55 0.3159676
+## 11 60 0.3099520
+## 12 65 0.3045650
+## 13 70 0.2996946
+## 14 75 0.2952558
+## 15 80 0.2911825
+## 16 85 0.2874225
+## 17 90 0.2839340
+## 18 95 0.2806827
+## 19 100 0.2776403
+[6]
+# (iv)
+plot(output, type = "l", xlab = "X", ylab = "p", main = "Probability of maxim
+um claim exceeding a threshold X")
+ [4]
+IAI CS2B-0722
+Page 4 of 14
+# (v) 
+# If gamma is positive, the distribution is a Freschet distribution
+# The Freschet distribution has a long, power-law tail that slowly converges 
+to 1. 1-CDF slowly converges to zero
+# The probability of a maximum loss exceeding a given threshold always 
+increases inversely with Threshold
+ [3]
+[20 Marks]
