--- a/00-M2-CS2B-ASI-July-2022/M2-Question3.Rmd
+++ b/00-M2-CS2B-ASI-July-2022/M2-Question3.Rmd
@@ -43,3 +43,56 @@ with rate of 30 customers per hour.
 and 15 customers between 11:20 AM and 12 noon. (4)
 3.   Prepare a probability distribution table for different number of customers (0, 1, 2…20) at 
 any given 10 minute time interval. (5)
+
+---
+
+Solution 3
+# (i) 
+dpois(2,7.5)
+## [1] 0.0155555
+ [2]
+# (ii)
+dpois(7,10)*dpois(15,20)
+## [1] 0.004652489
+ [4]
+ 
+---
+ 
+# (iii)
+probs<-c()
+for (i in 0:20) {
+ p<-dpois(i,5)
+ probs<-c(probs,p)
+}
+output <- matrix(NA, nrow = 21, ncol = 2)
+output<-as.data.frame(output)
+names(output)<-c("Customers","Probability")
+output$Customers<-0:20
+output$Probability<-probs
+output
+
+---
+## Customers Probability
+## 1 0 6.737947e-03
+## 2 1 3.368973e-02
+## 3 2 8.422434e-02
+## 4 3 1.403739e-01
+## 5 4 1.754674e-01
+## 6 5 1.754674e-01
+## 7 6 1.462228e-01
+## 8 7 1.044449e-01
+## 9 8 6.527804e-02
+## 10 9 3.626558e-02
+## 11 10 1.813279e-02
+## 12 11 8.242177e-03
+## 13 12 3.434240e-03
+## 14 13 1.320862e-03
+## 15 14 4.717363e-04
+## 16 15 1.572454e-04
+## 17 16 4.913920e-05
+## 18 17 1.445271e-05
+## 19 18 4.014640e-06
+## 20 19 1.056484e-06
+## 21 20 2.641211e-07
+
+---
