--- a/00-O2-CS2B-ASI-Dec-2022/O2-Question-3.Rmd
+++ b/00-O2-CS2B-ASI-Dec-2022/O2-Question-3.Rmd
@@ -1,17 +1,59 @@
+---
+title: "Statistics with R"
+subtitle: "Introduction to R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(magrittr)
+library(knitr)
+library(dplyr)
+library(janitor)
+
+
+```
+
+```{css, echo=FALSE}
+pre {
+  background: #ADD8E6;
+  max-width: 100%;
+  overflow-x: scroll;
+}
+```
+
+* Introduction to R for Actuarial Students
+
+* CS1B Curriculum
+
+* Introduction to R programming
+* Fundamentals of Statistical Analysis
+
+* Question 4
+
+---
+
 Q. 3) Set the simulation seed to 1234 prior to carrying out the analysis.
+
 i) Create a vector of values from 1 to 1000 and store in a variable ‘x’. Create another 
 vector ‘y’ by using the rule: y = sin(x/40)+ε, where ε is a normal random variable with 
-a mean of 0 and a standard deviation of 0.1. (4)
-ii) Plot the x and y as a line and add grey colour to the line. Add gridlines to the plot. (2)
-iii) Create a vector to capture the ‘y’ values with a lag of the past 40 values (including the 
-current value). Plot the lag as a red line added to the existing plot. (3)
-IAI CS2B-1222
- Page 4 of 4
-iv) Create a vector to capture the ‘y’ values with a lag of the past 20 values, the current 
-value and 20 future values. Plot the lag as a blue line added to the existing plot. (4)
+a mean of 0 and a standard deviation of 0.1. 
 
-############################
-[22 marks]
+ii) Plot the x and y as a line and add grey colour to the line. Add gridlines to the plot. 
+
+iii) Create a vector to capture the ‘y’ values with a lag of the past 40 values (including the 
+current value). Plot the lag as a red line added to the existing plot. 
+
+iv) Create a vector to capture the ‘y’ values with a lag of the past 20 values, the current 
+value and 20 future values. Plot the lag as a blue line added to the existing plot. 
+
+---
+
 Solution.3
 i)
 > #Generate time series
@@ -19,17 +61,19 @@ i)
 > x <- 1:1000
 > y <- sin(x/40) + rnorm(1000,sd=.1) (3 
 w (4)
+
+---
+
 ii)
 > # Plot the unsmoothed data (gray)
 > plot(x, y, type="l", col=grey(.5))
 > # add gridlines
 > grid() 
 (3 
-IAI CS2B-1222
- Page 8 of 11
-w 
-(2)
-iii)
+
+---
+
+### Part C
 > # Smoothed with lag:
 > # average of current sample and 39 previous samples (red)
 > f40 <- rep(1/40, 40)
@@ -40,29 +84,27 @@ iii)
 0.025 0.025 0.025 0.025 0.025
 > y_lag <- filter(y, f40, sides=1)
 > lines(x, y_lag, col="red") 
-(3 
-IAI CS2B-1222
- Page 9 of 11
+```
+---
+
 w (3)
 iv)
+
+```{r}
 > # Smoothed symmetrically:
 > # average of current sample, 20 future samples, and 20 past samples (blue)
 > f41 <- rep(1/41,41)
 > f41
-[1] 0.02439024 0.02439024 0.02439024 0.02439024 0.02439024 0.02439024 0.02439024 
-0.02439024 0.02439024 0.02439024
-[11] 0.02439024 0.02439024 0.02439024 0.02439024 0.02439024 0.02439024 0.02439024 
-0.02439024 0.02439024 0.02439024
-[21] 0.02439024 0.02439024 0.02439024 0.02439024 0.02439024 0.02439024 0.02439024 
-0.02439024 0.02439024 0.02439024
-[31] 0.02439024 0.02439024 0.02439024 0.02439024 0.02439024 0.02439024 0.02439024 
-0.02439024 0.02439024 0.02439024
-[41] 0.02439024
 > y_sym <- filter(y, f41, sides=2)
 > lines(x, y_sym, col="blue") 
-(3 
-IAI CS2B-1222
+
+```
+
+---
+
  Page 10 of 11
  
  (4)
 [13 Marks]
+
+---
